Implement vavr, code clean